Fix responsive containers on much smaller screens, flex nav on mobile

--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -13,7 +13,11 @@
     display: none;
   }
 }
-
+.icons-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .social-icons {
   margin: 0;
   list-style-type: none;
